[package]
name = "opentag"
version = "0.0.1"
authors = ["Sujal Bolia <sujalbolia@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "opentag opens a tagged path or URL using the configured system program"
homepage = "https://github.com/nextonesfaster/opentag"
repository = "https://github.com/nextonesfaster/opentag"
keywords = ["open", "tags", "url", "file"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ot"
path = "src/main.rs"

[dependencies]
open = "3.0.1"
clap = { version = "3.2.8", features = ["cargo", "derive", "wrap_help"] }
serde = { version = "1.0.138", default_features = false, features = ["derive"] }
serde_json = "1.0.82"
termcolor = "1.1.3"
dirs-next = "2.0.0"
shellexpand = "2.1.0"
arboard = { version = "2.1.1", default_features = false }
dialoguer = { version = "0.10.1", features = ["fuzzy-select"] }
itertools = "0.10.3"
