[package]
name = "opentag"
version = "1.0.0"
authors = ["Sujal Bolia <sujalbolia@gmail.com>"]
edition = "2024"
license = "MIT/Apache-2.0"
description = "opentag opens a tagged path or URL using the configured system program"
homepage = "https://github.com/nextonesfaster/opentag"
repository = "https://github.com/nextonesfaster/opentag"
keywords = ["open", "tags", "url", "file"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ot"
path = "src/main.rs"

[dependencies]
open = "5.3.2"
clap = { version = "4.5.37", features = [
    "cargo",
    "derive",
    "wrap_help",
    "string",
] }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
termcolor = "1.4.1"
dirs-next = "2.0.0"
shellexpand = "3.1.1"
arboard = { version = "3.5.0", default-features = false }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
itertools = "0.14.0"
color-print = "0.3.7"
